; ModuleID = '/home/carl/AnghaBench/h2o/deps/neverbleed/extr_neverbleed.c_expbuf_dispose.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/neverbleed/extr_neverbleed.c_expbuf_dispose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.expbuf_t = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.expbuf_t*)* @expbuf_dispose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @expbuf_dispose(%struct.expbuf_t* %0) #0 {
  %2 = alloca %struct.expbuf_t*, align 8
  store %struct.expbuf_t* %0, %struct.expbuf_t** %2, align 8
  %3 = load %struct.expbuf_t*, %struct.expbuf_t** %2, align 8
  %4 = getelementptr inbounds %struct.expbuf_t, %struct.expbuf_t* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %15

7:                                                ; preds = %1
  %8 = load %struct.expbuf_t*, %struct.expbuf_t** %2, align 8
  %9 = getelementptr inbounds %struct.expbuf_t, %struct.expbuf_t* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = load %struct.expbuf_t*, %struct.expbuf_t** %2, align 8
  %12 = getelementptr inbounds %struct.expbuf_t, %struct.expbuf_t* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = call i32 @OPENSSL_cleanse(i32 %10, i64 %13)
  br label %15

15:                                               ; preds = %7, %1
  %16 = load %struct.expbuf_t*, %struct.expbuf_t** %2, align 8
  %17 = getelementptr inbounds %struct.expbuf_t, %struct.expbuf_t* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @free(i32 %18)
  %20 = load %struct.expbuf_t*, %struct.expbuf_t** %2, align 8
  %21 = call i32 @memset(%struct.expbuf_t* %20, i32 0, i32 16)
  ret void
}

declare dso_local i32 @OPENSSL_cleanse(i32, i64) #1

declare dso_local i32 @free(i32) #1

declare dso_local i32 @memset(%struct.expbuf_t*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
